deploy/kind/prerequisites/networking-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: hypershell-gw
  namespace: hypershell-system
spec:
  gatewayClassName: envoy-gateway
  listeners:
    - name: https
      hostname: "*.hypershell.localhost"
      port: 443
      protocol: HTTPS
      tls:
        mode: Terminate
        certificateRefs:
          - name: hypershell-https-tls
            kind: Secret
      allowedRoutes:
        namespaces:
          from: All
    - name: grpc
      hostname: "*.gw.localhost"
      port: 443
      protocol: HTTPS
      tls:
        mode: Terminate
        certificateRefs:
          - name: hypershell-gw-tls
            kind: Secret
      allowedRoutes:
        namespaces:
          from: All
    - name: keycloak
      hostname: "KEYCLOAK_HOSTNAME_PLACEHOLDER"
      port: KEYCLOAK_PORT_PLACEHOLDER
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: All
