deploy/kind/prerequisites/httproutes.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: api-server
  namespace: NAMESPACE_PLACEHOLDER
spec:
  parentRefs:
    - name: hypershell-gw
      namespace: hypershell-system
  hostnames:
    - API_HOSTNAME_PLACEHOLDER
  rules:
    - backendRefs:
        - name: hypershell-api-server
          port: 8000
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: web-console
  namespace: NAMESPACE_PLACEHOLDER
spec:
  parentRefs:
    - name: hypershell-gw
      namespace: hypershell-system
  hostnames:
    - CONSOLE_HOSTNAME_PLACEHOLDER
  rules:
    - backendRefs:
        - name: hypershell-web-console
          port: 3000
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: health
  namespace: NAMESPACE_PLACEHOLDER
spec:
  parentRefs:
    - name: hypershell-gw
      namespace: hypershell-system
  hostnames:
    - HEALTH_HOSTNAME_PLACEHOLDER
  rules:
    - backendRefs:
        - name: hypershell-api-server
          port: 8434
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: keycloak
  namespace: keycloak
spec:
  parentRefs:
    - name: hypershell-gw
      namespace: hypershell-system
      sectionName: keycloak
  hostnames:
    - KEYCLOAK_HOSTNAME_PLACEHOLDER
  rules:
    - backendRefs:
        - name: keycloak-service
          port: KEYCLOAK_PORT_PLACEHOLDER
